Update swayosd styling

--- a/config/swayosd/style.css
+++ b/config/swayosd/style.css
@@ -1,9 +1,10 @@
 window {
   border-radius: 8px;
-  background-color: #0f1417;
-  border: 1px solid rgba(140, 207, 240, 0.3);
+  background-color: rgba(15, 20, 23, 0.7);
+  border: none;
   padding: 4px 8px;
-  margin: 0;
+  margin: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
 #container {
@@ -24,7 +25,7 @@ label {
 
 progressbar {
   border-radius: 3px;
-  background-color: #1b2023;
+  background-color: rgba(27, 32, 35, 0.8);
   min-height: 5%;
   min-width: 100px;
 }
