--- a/config/swayosd/style.css
+++ b/config/swayosd/style.css
@@ -1,10 +1,9 @@
 window {
   border-radius: 8px;
-  background-color: rgba(15, 20, 23, 0.7);
-  border: none;
+  background-color: rgba(14, 20, 21, 0.7);
+  border: 1px solid #899294;
   padding: 4px 8px;
   margin: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
 #container {
@@ -12,7 +11,7 @@ window {
 }
 
 image {
-  color: #8ccff0;
+  color: #81d3de;
   padding-right: 4px;
   -gtk-icon-size: 14px;
 }
@@ -20,12 +19,12 @@ image {
 label {
   font-family: "JetBrainsMono Nerd Font";
   font-size: 12pt;
-  color: #dfe3e7;
+  color: #dee4e4;
 }
 
 progressbar {
   border-radius: 3px;
-  background-color: rgba(27, 32, 35, 0.8);
+  background-color: rgba(27, 33, 34, 0.8);
   min-height: 5%;
   min-width: 100px;
 }
@@ -37,10 +36,10 @@ image:disabled {
 
 progress {
   border-radius: 3px;
-  background-color: #8ccff0;
+  background-color: #81d3de;
   min-height: 3px;
 }
 
 progress:disabled {
-  background-color: #8a9297;
+  background-color: #899294;
 }
