--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,14 +1,14 @@
 /* Waybar CSS - Matugen Generated */
 /* colors defined at top for easy configuring */
-@define-color background #0f1417;
-@define-color second-background #1b2023;
-@define-color text #dfe3e7;
-@define-color borders #8a9297;
-@define-color focused #8ccff0;
-@define-color focused2 #b4cad6;
-@define-color color1 #c7c2ea;
-@define-color color2 #b4cad6;
-@define-color color3 #8ccff0;
+@define-color background #0e1415;
+@define-color second-background #1b2122;
+@define-color text #dee4e4;
+@define-color borders #899294;
+@define-color focused #81d3de;
+@define-color focused2 #b1cbcf;
+@define-color color1 #b9c6ea;
+@define-color color2 #b1cbcf;
+@define-color color3 #81d3de;
 @define-color urgent #ffb4ab;
 
 * {
