--- a/config/matugen/templates/swayosd.css
+++ b/config/matugen/templates/swayosd.css
@@ -1,10 +1,9 @@
 window {
   border-radius: 8px;
   background-color: rgba({{colors.surface.default.red}}, {{colors.surface.default.green}}, {{colors.surface.default.blue}}, 0.7);
-  border: none;
+  border: 1px solid #{{colors.outline.default.hex_stripped}};
   padding: 4px 8px;
   margin: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
 #container {
