refactor(waybar): improve performance and event-driven updates

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,14 +1,14 @@
 /* Waybar CSS - Matugen Generated */
 /* colors defined at top for easy configuring */
-@define-color background #0e1415;
-@define-color second-background #1b2122;
-@define-color text #dee4e4;
-@define-color borders #899294;
-@define-color focused #81d3de;
-@define-color focused2 #b1cbcf;
-@define-color color1 #b9c6ea;
-@define-color color2 #b1cbcf;
-@define-color color3 #81d3de;
+@define-color background #121414;
+@define-color second-background #1f2020;
+@define-color text #e3e2e2;
+@define-color borders #919190;
+@define-color focused #b8cacc;
+@define-color focused2 #bec8ca;
+@define-color color1 #b1cbcf;
+@define-color color2 #bec8ca;
+@define-color color3 #b8cacc;
 @define-color urgent #ffb4ab;
 
 * {
